# entanglement

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
chunker/: Cargo.toml
chunker/src/: chunker.rs  lib.rs  tree.rs
cli/: Cargo.toml
cli/src/: main.rs
entangler/: Cargo.toml
entangler/src/: chunker.rs  config.rs  entangler.rs  executer.rs  grid.rs  lattice.rs  lib.rs  metadata.rs  parity.rs  printer.rs  repairer.rs  stream.rs
entangler/tests/: entangler_test.rs  performance_test.rs
storage/: Cargo.toml
storage/src/: iroh.rs  lib.rs  mock.rs  storage.rs
