[workspace]
members = []
resolver = "2"

[workspace.package]
authors = ["Entanglement Contributors"]
description = "Alpha entanglement codes for robust error correction and data availability in distributed systems."
edition = "2021"
homepage = "https://github.com/textileio/entanglement"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/textileio/entanglement"
keywords = [
    "alpha entanglement",
    "error correction",
    "data availability",
    "distributed systems",
    "iroh",
    "ipfs",
]
version = "0.1.0"

[workspace.dependencies]
cid = { version = "0.10.1", default-features = false, features = [
    "serde-codec",
    "std",
] }
