[package]
name = "chunker"
description = "Chunker chunking up data into chunks and form a merkle tree."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bao = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
