[package]
name = "entangler"
description = "Entangler that uses the Alpha Entanglement."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

storage = { path = "../storage" }
chunker = { path = "../chunker" }
