[package]
name = "recall_entangler"
description = "Entangler that uses the Alpha Entanglement."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
iroh = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

recall_entangler_storage = { version = "0.1.0", path = "../storage", features = [] }

[dev-dependencies]
recall_entangler_storage = { path = "../storage", features = ["mock"] }
jemallocator = "0.5"
jemalloc-ctl = "0.5"
tokio-util = { version = "0.7", features = ["io"] }

[[test]]
name = "entangler_integration_tests"
path = "tests/entangler_test.rs"

[[test]]
name = "entangler_performance_tests"
path = "tests/performance_test.rs"
