[package]
name = "storage"
description = "Distributed storage for uploading and downloading data."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
iroh = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

multihash = { version = "0.18.1", optional = true }
sha2 = { version = "0.10.6", optional = true }

[dev-dependencies]
multihash = { version = "0.18.1" }
sha2 = { version = "0.10.6" }

[features]
mock = ["dep:multihash", "dep:sha2"]
